src/objects/MUSW__Parcel__c.object
<CustomObject>
    <description>Property parcel information</description>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Parcels (Account)</relationshipLabel>
        <relationshipName>Parcels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Address_Id__c</fullName>
        <externalId>true</externalId>
        <label>Address_Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Address_Type__c</fullName>
        <label>Address_Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>AMUSEMENT</fullName>
                </value>
                <value>
                    <fullName>CHECK</fullName>
                </value>
                <value>
                    <fullName>CONTACT</fullName>
                </value>
                <value>
                    <fullName>CUSTOMER REQUEST</fullName>
                </value>
                <value>
                    <fullName>DO NOT USE</fullName>
                </value>
                <value>
                    <fullName>HOME</fullName>
                </value>
                <value>
                    <fullName>INSPECTION</fullName>
                </value>
                <value>
                    <fullName>INSPECTIONS</fullName>
                </value>
                <value>
                    <fullName>INVOICE</fullName>
                </value>
                <value>
                    <fullName>LOCATION OF HOME</fullName>
                </value>
                <value>
                    <fullName>LPOCONTRACT</fullName>
                </value>
                <value>
                    <fullName>MAILING ADDRESS</fullName>
                </value>
                <value>
                    <fullName>MH</fullName>
                </value>
                <value>
                    <fullName>MINE SAFETY</fullName>
                </value>
                <value>
                    <fullName>OWNER</fullName>
                </value>
                <value>
                    <fullName>UNDELIVERABLE</fullName>
                </value>
                <value>
                    <fullName>WORK</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>PHYSICAL ADDRESS</fullName>
                </value>
                <value>
                    <fullName>SITE</fullName>
                    <isActive>false</isActive>
                    <label>SITE</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Application_BG__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Application</label>
        <referenceTo>MUSW__Application2__c</referenceTo>
        <relationshipLabel>Parcels</relationshipLabel>
        <relationshipName>Parcels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Archive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>For identifying archived MUNI record.</description>
        <label>Archive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Canadian_provinces__c</fullName>
        <label>Canadian provinces</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>British Columbia</fullName>
                    <default>true</default>
                    <label>British Columbia</label>
                </value>
                <value>
                    <fullName>Alberta</fullName>
                </value>
                <value>
                    <fullName>Manitoba</fullName>
                </value>
                <value>
                    <fullName>New Brunswick</fullName>
                </value>
                <value>
                    <fullName>Newfoundland and Labrador</fullName>
                </value>
                <value>
                    <fullName>Northwest Territories</fullName>
                </value>
                <value>
                    <fullName>Nova Scotia</fullName>
                </value>
                <value>
                    <fullName>Nunavut</fullName>
                </value>
                <value>
                    <fullName>Ontario</fullName>
                </value>
                <value>
                    <fullName>Prince Edward Island</fullName>
                </value>
                <value>
                    <fullName>Quebec</fullName>
                </value>
                <value>
                    <fullName>Saskatchewan</fullName>
                </value>
                <value>
                    <fullName>Yukon</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <description>Field for comments</description>
        <label>Comments</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Parcels (Contact)</relationshipLabel>
        <relationshipName>Parcels</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <description>Field to Store Country details.</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>List_of_Countries</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <description>Field to Store county</description>
        <label>County</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>MUSW__State__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>County</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cust_Id__c</fullName>
        <label>Cust_Id</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>International_Address__c</fullName>
        <description>Enter the international address using this field.</description>
        <inlineHelpText>Enter the international address</inlineHelpText>
        <label>International Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_This_A_Military_Address__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to check if Address is Military Address.</description>
        <label>Is This A Military Address?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MUSW__AlertCode__c</fullName>
        <description>Alert Number code. Used by the indicator to determine which image to present.</description>
        <label>Alert Code</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Alert_Indicator__c</fullName>
        <description>Alert Flag indicator image.</description>
        <formula>HYPERLINK(&quot;/apex/musw__TaskAlert?id=&quot;+ Id, IMAGE( 
CASE( MUSW__AlertCode__c, 
0, &quot;/img/samples/light_green.gif&quot;, 
1, &quot;/img/samples/light_yellow.gif&quot;, 
2, &quot;/img/samples/light_red.gif&quot;, 
&quot;https://letterbatch.mybasicgov.com/img/light_off.gif&quot;), 
&quot;none&quot;), &quot;_top&quot;)</formula>
        <inlineHelpText>Click to view/add/update your alerts</inlineHelpText>
        <label>Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Alert__c</fullName>
        <description>Calculated text description of the alert indicator image.</description>
        <formula>CASE ( MUSW__AlertCode__c, 
0, &quot;None&quot;, 
1, &quot;At least one active severe Alert&quot;, 
2, &quot;At least one active warning Alert&quot;,
&quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Alert Note</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Assessed_Buildings_Values__c</fullName>
        <description>Total assessed value of the constructed building on the property.</description>
        <label>Assessed Buildings Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Assessed_Land_Value__c</fullName>
        <description>Total assessed value of the land of the property</description>
        <label>Assessed Land Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Assessed_Value_Total__c</fullName>
        <description>Total assessed value including land, improvements, and buildings.</description>
        <formula>MUSW__Assessed_Buildings_Values__c +  MUSW__Assessed_Land_Value__c +  MUSW__Improvement_Value__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Assessed Value Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Assessor_Owner_Address__c</fullName>
        <description>Parcel Owner&apos;s address as indicated by the Assessor. This is usually the full address. If this is not provided by Assessor, use the Assessor address part-fields.</description>
        <label>Assessor Owner Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Assessor_Owner_City__c</fullName>
        <description>Parcel Owner&apos;s address city as indicated by the Assessor.</description>
        <label>Assessor Owner City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Assessor_Owner_Name__c</fullName>
        <description>Parcel Owner&apos;s name as indicated by the Assessor. This may be the legal entity name which may be a business or combination of individual&apos;s names</description>
        <label>Assessor Owner Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Assessor_Owner_Post_Zip_Code__c</fullName>
        <description>Parcel Owner&apos;s address Postal or Zip Code as indicated by the Assessor.</description>
        <label>Assessor Owner Post/Zip Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Assessor_Owner_State__c</fullName>
        <description>Parcel Owner&apos;s address State or Province as indicated by the Assessor.</description>
        <label>Assessor Owner State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Assessor_Owner_Street__c</fullName>
        <description>Parcel Owner&apos;s street address as indicated by the Assessor. Includes street number and street name.</description>
        <label>Assessor Owner Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Block_Number__c</fullName>
        <description>The Surveyed block number. Often used in conjunction with Lot Number.</description>
        <label>Block</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Building_Floor_Area__c</fullName>
        <description>Area of the building footprint.</description>
        <inlineHelpText>Square Feet, or Meters Squared</inlineHelpText>
        <label>Building Floor Area</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__City__c</fullName>
        <description>The City this parcel or address is located in.</description>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Current_Land_Use__c</fullName>
        <description>Classification of what the land is currently allowed to be used for.</description>
        <label>Current Land Use</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current Land Use 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Date_Last_Sold__c</fullName>
        <description>Date the property was last sold.</description>
        <label>Date Last Sold</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MUSW__District__c</fullName>
        <description>The area the property is part of geographically, as defined by a particular characteristic.</description>
        <label>District</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>District 1</fullName>
                </value>
                <value>
                    <fullName>District 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Fire_Zone__c</fullName>
        <description>The geographic area the property is served by a particular fire hall or category of risk of fire.</description>
        <label>Fire District</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Fire Zone 1</fullName>
                </value>
                <value>
                    <fullName>Fire Zone 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Flood_Zone__c</fullName>
        <description>The geographic area the property may be affected by a particular flood level or body of water.</description>
        <label>Flood Zone</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Flood Zone 1</fullName>
                </value>
                <value>
                    <fullName>Flood Zone 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Geolocation__c</fullName>
        <description>The single map location of the centerpoint of the parcel or geocoded location of the address.</description>
        <label>Geolocation</label>
        <scale>9</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>MUSW__Improvement_Value__c</fullName>
        <description>Total assessed value of the constructed non-buildings on the property.</description>
        <label>Assessed Improvement Value</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>MUSW__Latitude__c</fullName>
        <description>Legacy.</description>
        <label>Latitude</label>
        <precision>14</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Legal_Description__c</fullName>
        <description>The Land Title&apos;s legal description of the property.</description>
        <label>Legal Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MUSW__Location__c</fullName>
        <description>Address text portion including only the street and city.</description>
        <formula>MUSW__Street__c   &amp; &quot; &quot; &amp;  MUSW__City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Location</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Longitude__c</fullName>
        <description>Legacy.</description>
        <label>Longitude</label>
        <precision>14</precision>
        <scale>5</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Lot_Size__c</fullName>
        <description>The surface extent of the property.</description>
        <label>Lot Size</label>
        <precision>11</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MUSW__Lot__c</fullName>
        <description>The lot number of the property. This can be used in conjunction with the subdivision, block, or section.</description>
        <label>Lot</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Map_Reference__c</fullName>
        <description>Description of the boundaries, names or unique identifiers of the geographic area.</description>
        <label>Map Reference</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Parcel_Number2__c</fullName>
        <description>Unique parcel identification number.</description>
        <externalId>true</externalId>
        <label>Parcel Number</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>MUSW__Parcel_Number__c</fullName>
        <description>Alternate Parcel Number that can be used to find this parcel, but may not necessarily be unique.</description>
        <label>Parcel Number Alternate</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Parent_Parcel__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The associated parcel that is the containing parcel for addresses, units or sub-lots.</description>
        <label>Parent Parcel</label>
        <referenceTo>MUSW__Parcel__c</referenceTo>
        <relationshipLabel>Related Parcels</relationshipLabel>
        <relationshipName>Parcel</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Planning_Area__c</fullName>
        <description>The area having a geographic boundary associated with a plan.</description>
        <label>Planning Area</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Planning Area 1</fullName>
                </value>
                <value>
                    <fullName>Planning Area 2</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Post_Zip_Code__c</fullName>
        <description>Address associated with this parcel&apos;s Post or Zip Code.</description>
        <label>Post/Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Primary_Contact_Name__c</fullName>
        <description>Name of the primary contact, for display purposes.</description>
        <label>Primary Contact Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Parcels</relationshipLabel>
        <relationshipName>Parcels2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MUSW__Primary_Zoning__c</fullName>
        <description>Geographic area for which this parcel is currently primarily zoned.</description>
        <label>Primary Zoning</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>R1 - Residential Zoning Type I</fullName>
                </value>
                <value>
                    <fullName>R2 - Residential Zoning Type II</fullName>
                </value>
                <value>
                    <fullName>C1 - Commercial Zoning Type I</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Secondary_Zoning__c</fullName>
        <description>Geographic area for which this parcel is currently zoned.</description>
        <label>Secondary Zoning</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>R1 - Residential Zoning Type I</fullName>
                </value>
                <value>
                    <fullName>R2 - Residential Zoning Type II</fullName>
                </value>
                <value>
                    <fullName>C1 - Commercial Zoning Type I</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__State__c</fullName>
        <description>The state this parcel or address is located in.</description>
        <label>State/ Prov.</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WA</fullName>
                    <default>true</default>
                    <label>WA</label>
                </value>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Street2__c</fullName>
        <description>The full address or street this parcel or address is located on.</description>
        <label>Street</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Street_Direction__c</fullName>
        <description>The directional part of town this parcel or address is located in.</description>
        <label>Street Direction</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Street_Number__c</fullName>
        <description>The unique number associated to the building of this parcel or address&apos;s street</description>
        <label>Street Number</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Street_Suffix__c</fullName>
        <description>The type of street for this parcel or address: i.e., street, avenue, alley, boulevard, etc. May be abbreviated to postal standards.</description>
        <label>Street Suffix</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Street__c</fullName>
        <description>If address part fields are used, concatenate them into a single string.</description>
        <formula>IF(MUSW__Street2__c !=  &quot;&quot;, IF( MUSW__Street_Number__c != &quot;&quot;,MUSW__Street_Number__c &amp; &quot; &quot;,&quot;&quot;) &amp;  IF( MUSW__Street_Direction__c != &quot;&quot;,MUSW__Street_Direction__c &amp; &quot; &quot;,&quot;&quot;) &amp; MUSW__Street2__c &amp; IF(MUSW__Street_Suffix__c != &quot;&quot;,&quot; &quot; &amp; MUSW__Street_Suffix__c,&quot;&quot;) &amp; IF( MUSW__Unit__c != &quot;&quot;, &quot; &quot; &amp; IF(MUSW__Unit_Type__c != &quot;&quot;, MUSW__Unit_Type__c &amp; &quot; &quot;, &quot;#&quot;) &amp; MUSW__Unit__c,&quot;&quot;), Name)</formula>
        <label>Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Subdivision__c</fullName>
        <description>The name of the subdivision the parcel lot or address is part of.</description>
        <label>Subdivision</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Subdivision 1</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MUSW__Tax_Area__c</fullName>
        <description>The jurisdiction of the tax authority this parcel or address is located in. Jurisdictions may overlap.</description>
        <label>Tax Area</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Unit_Type__c</fullName>
        <description>The type of unit this address is for; i.e., Suite, Unit, etc.</description>
        <label>Unit Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Unit__c</fullName>
        <description>The number or letter of the condo or apartment unit.</description>
        <label>Unit</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MUSW__Year_Built__c</fullName>
        <description>The year the current building was constructed.</description>
        <label>Year Built</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Melissa_Address_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Melissa Address Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Lookup to Account</description>
        <label>Primary Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Addresses</relationshipLabel>
        <relationshipName>Addresses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Release__c</fullName>
        <label>Release</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Status of parcel record</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                    <default>true</default>
                    <label>Active</label>
                </value>
                <value>
                    <fullName>Inactive</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Validated__c</fullName>
        <defaultValue>false</defaultValue>
        <description>True if validated through geocode service</description>
        <label>Validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_Physical_and_Mailing_Address_Same__c</fullName>
        <defaultValue>false</defaultValue>
        <label>is Physical and Mailing Address Same</label>
        <type>Checkbox</type>
    </fields>
	    <fields>
        <fullName>Designated_Engineer_License__c</fullName>
        <label>Designated Engineer License #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Designated_Land_Surveyor_License__c</fullName>
        <label>Designated Land Surveyor License #</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Parcel</label>
    <listViews>
        <fullName>MUSW__All</fullName>
        <columns>NAME</columns>
        <columns>MUSW__Alert_Indicator__c</columns>
        <columns>MUSW__Street__c</columns>
        <columns>MUSW__Parcel_Number2__c</columns>
        <columns>MUSW__Geolocation__Longitude__s</columns>
        <columns>MUSW__Geolocation__Latitude__s</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Parcels</pluralLabel>
    <recordTypes>
        <fullName>Address</fullName>
        <active>true</active>
        <label>Address</label>
    </recordTypes>
    <recordTypes>
        <fullName>Affiliated_Location</fullName>
        <active>true</active>
        <label>Affiliated Location</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>Create_Parcel_By_Delegate__c</fullName>
        <label>Create Parcel By Delegate</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>Insert_Parcel_Share__c</fullName>
        <label>Insert Parcel Share</label>
    </sharingReasons>
</CustomObject>